Add imagen de scores

--- a/bi_frases.ipynb
+++ b/bi_frases.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "dd6f35d0-f6c4-44df-b1d4-9fe6f208dc0c",
    "metadata": {},
    "outputs": [
@@ -20,15 +20,15 @@
       "__ misoginia_Es ___\n",
       "__ semeval2018_anger_Es ___\n",
       "dataset, f1_macro, precision_macro, recall_macro, f1_micro\n",
-      "SCv1_En, 0.76331, 0.76343, 0.76361, 0.76333\n",
-      "SS-Twitter_En, 0.86701, 0.86914, 0.86538, 0.87000\n",
-      "SS-Youtube_En, 0.88162, 0.87503, 0.88905, 0.90554\n",
-      "business_En, 0.97374, 0.97222, 0.97917, 0.96875\n",
-      "haha2018_Es, 0.84910, 0.84889, 0.84932, 0.86293\n",
-      "meoffendes2021_mx_Es, 0.79809, 0.78351, 0.81782, 0.85631\n",
-      "mexa3t2018_aggress_Es, 0.84828, 0.84515, 0.85168, 0.87038\n",
-      "misoginia_Es, 0.88636, 0.88660, 0.88645, 0.88636\n",
-      "semeval2018_anger_Es, 0.56955, 0.54097, 0.69082, 0.65394\n"
+      "SCv1_En, 0.59556, 0.59698, 0.59698, 0.59556\n",
+      "SS-Twitter_En, 0.72454, 0.72011, 0.73552, 0.74222\n",
+      "SS-Youtube_En, 0.74462, 0.73067, 0.77567, 0.79111\n",
+      "business_En, 0.71601, 0.73056, 0.73889, 0.77273\n",
+      "haha2018_Es, 0.77383, 0.77641, 0.77169, 0.78900\n",
+      "meoffendes2021_mx_Es, 0.68582, 0.67092, 0.72917, 0.76877\n",
+      "mexa3t2018_aggress_Es, 0.75782, 0.75420, 0.76264, 0.77893\n",
+      "misoginia_Es, 0.73260, 0.73268, 0.73260, 0.73263\n",
+      "semeval2018_anger_Es, 0.31228, 0.31146, 0.38754, 0.44706\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
     "    #train_df = train_df.loc[0:399, ['text', 'klass']]\n",
     "    #test_df = test_df.loc[0:79, ['text', 'klass']]\n",
     "    \n",
-    "    if True:\n",
+    "    if False:  # True para BiFrases\n",
     "        \"\"\"\n",
     "        TODO: en cada append, el dataset se reconstruye completo. Encontrar otro método más rápido.\n",
     "        \"\"\"\n",
