msg de true/fals

--- a/bi_frases.ipynb
+++ b/bi_frases.ipynb
@@ -61,7 +61,10 @@
     "    #train_df = train_df.loc[0:399, ['text', 'klass']]\n",
     "    #test_df = test_df.loc[0:79, ['text', 'klass']]\n",
     "    \n",
-    "    if False:  # True para BiFrases\n",
+    "    ############\n",
+    "    ## Cambiar True/False para usar o no las BiFrases\n",
+    "    ###########\n",
+    "    if False: \n",
     "        \"\"\"\n",
     "        TODO: en cada append, el dataset se reconstruye completo. Encontrar otro método más rápido.\n",
     "        \"\"\"\n",
